# verificador-tp-uno

./: .gitignore  Cargo.toml
haskell_ghci_parser/: Cargo.toml
haskell_ghci_parser/src/: lib.rs
src/: main.rs
verificadorlib/: Cargo.toml
verificadorlib/src/: lib.rs
