[package]
name = "verificador"
version = "0.1.0"
authors = ["Sebastián Felgueras <sebastian.felgueras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
[dependencies]
verificadorlib = {path="verificadorlib"}
haskell_ghci_parser = {path="haskell_ghci_parser"}

